@@ -1,0 +1,8 @@
+CREATE UNIQUE INDEX `unique_seq_outcome_desc` \
+  ON `mqc_outcome_dict` (`short_desc`);
+CREATE UNIQUE INDEX `unique_lib_outcome_desc` \
+  ON `mqc_library_outcome_dict` (`short_desc`);
+
+
+
+
